sjengida/g2/initialize_zobrist
/data/output_dir/patch/sjeng/ida/gcc/O2/sjeng-gcc-O2/initialize_zobrist/src/ttable.c:543:16: error: use of undeclared identifier 'next'
while ( v1 != &next ); 
               ^
1 error generated.
make: *** [/data/output_dir/patch/sjeng/ida/gcc/O2/sjeng-gcc-O2/initialize_zobrist/src/obj/ttable.o] Error 1
